--- a/service-item-dev.properties
+++ b/service-item-dev.properties
@@ -1,3 +1,3 @@
-configuration.text=configurating development env...
-configuration.autor.name=Michaele
-configuration.autor.email=michaele@mail.com
+configuration.text=configurating development env...a
+configuration.autor.name=Michaelea
+configuration.autor.email=michaelea@mail.com
